Sun Oct 20 10:16:23 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* examples/C++NPv2/display_logfile.cpp: Fix for single threaded
	  builds.  

Sun Oct 20 10:12:42 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/Recursive_Condition_Test.cpp: Fix for single threaded
	  builds. The ACE_HAS_THREADS were improperly placed. 

Sun Oct 20 09:26:58 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* examples/C++NPv1/Makefile: Added changes from "Fri Oct 18
	  21:01:25 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>" back
	  since the changes are fine. Thanks to Craig for pointing that
	  out. 

Sun Oct 20 13:34:45 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* examples/C++NPv2/Makefile: Replace with recursive Makefile which
          does not use for loops.  Add .NOTPARALLEL target to fix
	  build errors on parallel builds.

Sun Oct 20 08:10:43 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/Recursive_Condition_Test.cpp: Fixed a unused variable warning.

Sun Oct 20 00:27:02 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/Recursive_Condition_Test.cpp: Fixed a fuzz error.

Sun Oct 20 00:14:32 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* examples/C++NPv1/Makefile: Reverted the change "Fri Oct 18
	  21:01:25 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>" since
	  this opens up some problems. Craig will look into it later and
	  provide a clean fix. Till then..

Sat Oct 19 20:00:00 2002  Stephen Torri <storri@cse.wustl.edu>

	* tests/Recursive_Condition_Test.cpp:

	  Added test to check nesting_level after requiring a Recursive  
	  Condition Mutex multiple times. Also after releasing for the
	  same number of times. 

	* tests/SString_Test.cpp:
	* ace/String_Base.i:

	  Bug 1323: Fixed. In the effort to protect from memory problems 
	  with non-null terminated strings the operators '<' and '>' where 