@@ -1,3 +1,7 @@
+Sun Oct 20 11:30:04 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
+
+	* tests/SPIPE_Test.cpp: Fixed compile errors in Borland builds. 
+
 Sun Oct 20 10:16:23 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
 
 	* examples/C++NPv2/display_logfile.cpp: Fix for single threaded
